# thinc-bigendian-ops

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
thinc_bigendian_ops/: __init__.py  bigendian_ops.pyx  ops.pyx
thinc_bigendian_ops/tests/: test_ops.py
