[metadata]
description = Make Thinc pipelines portable to big endian platorms. 
version = 0.0.1
url = https://github.com/andrewsi-z/thinc-bigendian-ops
author = Andrew M. Sica
author_email = andrewsi@us.ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    numpy>=1.21.0
    thinc>=8.0.10,<9.0.0

[options.entry_points]
thinc_ops =
    BigEndianOps = thinc_bigendian_ops:BigEndianOps

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    thinc_bigendian_ops/__init__.py

[tool:pytest]
markers =
    slow

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy
